# kendryte-standalone-sdk

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  kendryte-standalone-sdk.code-workspace
cmake/: CMakeLists.txt  common.cmake
lib/: CMakeLists.txt
lib/nncase/v1/include/nncase/: version.h
lib/nncase/v1/lib/cmake/nncasefunctional/: nncasefunctionalTargets-release.cmake  nncasefunctionalTargets.cmake
src/BSP/CanMV-K210/: camera.c  lcd.c  ov2640.c  sdcard.c
src/BSP/CanMV-K210/include/: camera.h  lcd.h  ov2640.h  sdcard.h
src/camera/: camera.c  camera.h  main.c
src/lcd/: main.c
src/lvgl_porting/: lv_port_disp.c  lv_port_disp.h  main.c
src/rtc/: main.c
src/sd_card/: main.c
src/sd_card_filesystem/: diskio.c  ffconf.h  main.c
src/yolo_20classes/: main.c
